--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -66,6 +66,7 @@ toml = "0.9.10"
 const_format = "0.2.35"
 git-version = "0.3.9"
 serde_json = { version = "1.0.148", optional = true }
+thiserror = "2.0.17"
 tracing = "0.1.44"
 tracing-subscriber = "0.3.22"
 human-panic = "2.0.5"
