--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -48,6 +48,7 @@ reedline = ["brush-interactive/reedline"]
 experimental = ["experimental-builtins", "experimental-load"]
 experimental-builtins = ["dep:brush-experimental-builtins"]
 experimental-load = ["dep:serde_json", "brush-core/serde"]
+schema = ["dep:schemars"]
 
 [lints]
 workspace = true
@@ -58,9 +59,14 @@ brush-builtins = { version = "^0.1.0", path = "../brush-builtins" }
 brush-experimental-builtins = { version = "^0.1.0", path = "../brush-experimental-builtins", optional = true }
 clap = { version = "4.5.53", features = ["derive", "env"] }
 color-print = "0.3.7"
+etcetera = "0.11.0"
+schemars = { version = "1.2.0", optional = true }
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.9.10"
 const_format = "0.2.35"
 git-version = "0.3.9"
 serde_json = { version = "1.0.148", optional = true }
+thiserror = "2.0.17"
 tracing = "0.1.44"
 tracing-subscriber = "0.3.22"
 human-panic = "2.0.5"
@@ -85,6 +91,7 @@ uuid = { version = "1.19.0", features = ["js"] }
 
 [dev-dependencies]
 anyhow = "1.0.100"
+tempfile = "3.24.0"
 brush-parser = { version = "^0.3.0", path = "../brush-parser" }
 assert_cmd = "2.1.1"
 assert_fs = "1.1.3"
