feat: rise of the xtask

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -252,18 +252,11 @@ jobs:
         run: |
           set -euxo pipefail
 
-          # Set us up to use cargo-llvm-cov
-          source <(cargo llvm-cov show-env --export-prefix)
-          cargo llvm-cov clean --workspace
-
-          # Run the tests
+          # Run tests with coverage collection
           result=0
-          cargo nextest run --workspace --no-fail-fast || result=$?
+          cargo xtask test coverage --output ./codecov-${VARIANT}.xml || result=$?
 
-          # Generate code coverage report
-          cargo llvm-cov report --cobertura --output-path ./codecov-${VARIANT}.xml || result=$?
-
-          # Rename test results.
+          # Rename test results for CI reporting
           mv target/nextest/default/test-results.xml ./test-results-${VARIANT}.xml
 
           # Report the actual test results
@@ -328,10 +321,10 @@ jobs:
           cache-all-crates: true
 
       - name: Format check
-        run: cargo fmt --check --all
+        run: cargo xtask check fmt
 
       - name: Check
-        run: cargo check --all-features --all-targets
+        run: cargo xtask check build
 
       - name: Install cargo-deny
         uses: taiki-e/install-action@b9c5db3aef04caffaf95a1d03931de10fb2a140f # v2.65.1
@@ -339,11 +332,11 @@ jobs:
           tool: cargo-deny
 
       - name: Deny check
-        run: cargo deny --all-features check all
+        run: cargo xtask check deps
 
       - name: Clippy check
         if: matrix.rust-version == 'stable'
-        run: cargo clippy --workspace --all-features --all-targets
+        run: cargo xtask check lint
 
   # Check for unneeded dependencies.
   check-deps:
@@ -366,7 +359,7 @@ jobs:
           tool: cargo-udeps
 
       - name: Check for unused dependencies
-        run: cargo udeps --workspace --all-targets --all-features
+        run: cargo xtask check unused-deps
 
   # Check that generated schemas are up-to-date
   check-schemas:
@@ -386,16 +379,8 @@ jobs:
       - name: Enable cargo cache
         uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5 # v2.8.2
 
-      - name: Regenerate schemas
-        run: |
-          cargo run --package xtask -- schema config --out schemas/config.schema.json
-
-      - name: Check for schema drift
-        run: |
-          if ! git diff --exit-code schemas/; then
-            echo "::error::Generated schemas are out of date. Please run 'cargo xtask schema config --out schemas/config.schema.json' and commit the changes."
-            exit 1
-          fi
+      - name: Check generated schemas
+        run: cargo xtask check schemas
 
   # Analyze public API surface
   analyze-public-api:
@@ -422,28 +407,10 @@ jobs:
         run: |
           set -euo pipefail
 
-          git checkout -b target
           git fetch origin main
 
       - name: Compare public APIs with main
-        run: |
-          set -euxo pipefail
-
-          mkdir diffs
-          mkdir reports
-
-          for crate in $(./scripts/enum-lib-crates.sh); do
-            diff=./diffs/${crate}.txt
-            report=./reports/api-diff-${crate}.md
-
-            cargo public-api diff -sss -p $crate origin/main..target >${diff}
-            ./scripts/format-api-diff-report.py ${diff} -p ${crate} >${report}
-
-            # If the report is empty, remove it.
-            if [[ ! -s ${report} ]]; then
-              rm -f ${report}
-            fi
-          done
+        run: cargo xtask analyze public-api --base origin/main --output-dir reports
 
       - name: Upload test report
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
@@ -483,15 +450,11 @@ jobs:
             ./main
 
       - name: Performance analysis on PR
-        run: |
-          set -euo pipefail
-          cargo bench --workspace --benches -- --output-format bencher | tee benchmarks.txt
+        run: cargo xtask analyze bench --output benchmarks.txt
         working-directory: pr
 
       - name: Performance analysis on main
-        run: |
-          set -euo pipefail
-          cargo bench --workspace --benches -- --output-format bencher | tee benchmarks.txt
+        run: cargo xtask analyze bench --output benchmarks.txt
         working-directory: main
 
       - name: Compare benchmark results
@@ -545,27 +508,15 @@ jobs:
           sudo apt-get install -y python3
           python3 -m pip install --user pytest pytest-xdist pytest-md-report pytest-json-report
 
-      # - name: "Run test suite (oracle)"
-      #   working-directory: bash-completion/test
-      #   run: |
-      #     pytest -n 128 --no-summary ./t || true
-
       - name: "Run test suite (brush)"
-        env:
-          BASH_COMPLETION_TEST_BASH: ${{ github.workspace }}/binaries/brush --noprofile --no-config --input-backend=basic
-        working-directory: bash-completion/test
+        working-directory: brush
         run: |
-          pytest -n 128 \
-              --json-report \
-              --json-report-file=$GITHUB_WORKSPACE/test-results-bash-completion.json \
-              ./t || true
-
-      - name: "Generate report summary"
-        run: |
-          python3 brush/scripts/summarize-pytest-results.py \
-            -r $GITHUB_WORKSPACE/test-results-bash-completion.json \
-            --title="Test Summary: bash-completion test suite" \
-            >$GITHUB_WORKSPACE/test-results-bash-completion.md
+          cargo xtask test \
+              --brush-path $GITHUB_WORKSPACE/binaries/brush \
+              external bash-completion \
+              --bash-completion-path $GITHUB_WORKSPACE/bash-completion \
+              --output $GITHUB_WORKSPACE/test-results-bash-completion.json \
+              --summary-output $GITHUB_WORKSPACE/test-results-bash-completion.md
 
       - name: Upload test report
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
