--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -21,10 +21,13 @@ workspace = true
 
 [dependencies]
 anyhow = "1.0.100"
-brush-shell = { version = "^0.3.0", path = "../brush-shell", features = ["schema"] }
+brush-shell = { version = "^0.3.0", path = "../brush-shell", features = [
+    "schema",
+] }
 clap = { version = "4.5.53", features = ["derive"] }
 clap_complete = "4.5.64"
 clap_mangen = "0.2.31"
 clap-markdown = "0.1.5"
 schemars = "1.2.0"
 serde_json = "1.0.148"
+xshell = "0.2.7"
