--- a/brush-experimental-builtins/Cargo.toml
+++ b/brush-experimental-builtins/Cargo.toml
@@ -23,4 +23,5 @@ workspace = true
 [dependencies]
 brush-core = { version = "^0.4.0", path = "../brush-core" }
 clap = { version = "4.5.53", features = ["derive", "wrap_help"] }
+serde = { version = "1.0.228", optional = true }
 serde_json = { version = "1.0.148", optional = true }
