fix: compat fixes for \[ and \] in prompt expansion

--- a/brush-shell/tests/cases/prompt.yaml
+++ b/brush-shell/tests/cases/prompt.yaml
@@ -186,3 +186,15 @@ cases:
       PS1='$(echo Hello)> '
       false
       echo $?
+
+  - name: "Brackets and var"
+    stdin: |
+      prompt='\[$var\]\u > '
+      echo "Prompt: ${prompt@P}"
+
+  - name: "Brackets and var (interactive mode)"
+    args: ["-i"]
+    ignore_stderr: true
+    stdin: |
+      prompt='\[$var\]\u > '
+      echo "Prompt: ${prompt@P}"
