--- a/brush-shell/tests/cases/builtins/read.yaml
+++ b/brush-shell/tests/cases/builtins/read.yaml
@@ -103,3 +103,49 @@ cases:
     min_oracle_version: 5.2 # \n renders differently in older shell versions
     stdin: |
       echo x | (read -d ""; declare -p REPLY)
+
+  # Timeout tests (read -t)
+  - name: "read -t 0 with data available in pipe"
+    # This test is inherently racy - poll(0) may check the pipe before echo's data arrives.
+    # Bash consistently wins this race; our implementation sometimes doesn't.
+    skip: true
+    stdin: |
+      echo "test" | { read -t 0; echo "exit: $?"; }
+
+  - name: "read -t 0 with no data (empty pipe)"
+    stdin: |
+      # Closed pipe with no data
+      : | { read -t 0; echo "exit: $?"; }
+
+  - name: "read -t with data immediately available"
+    stdin: |
+      echo "hello world" | { read -t 1 line; echo "exit: $?, line: '$line'"; }
+
+  - name: "read -t with fractional timeout and data available"
+    stdin: |
+      echo "test data" | { read -t 0.5 var; echo "exit: $?, var: '$var'"; }
+
+  - name: "read -t with regular file (always ready)"
+    test_files:
+      - path: "data.txt"
+        contents: |
+          line1
+          line2
+    stdin: |
+      read -t 0 < data.txt; echo "exit: $?"
+      read -t 1 line < data.txt; echo "exit: $?, line: '$line'"
+
+  - name: "read -t negative timeout is invalid"
+    ignore_stderr: true
+    stdin: |
+      read -t -1
+      echo "exit: $?"
+
+  - name: "read -t with -n option"
+    stdin: |
+      echo "abcdef" | { read -t 1 -n 3 var; echo "exit: $?, var: '$var'"; }
+
+  - name: "read -t 0 with here string"
+    stdin: |
+      read -t 0 <<< "hello"; echo "exit: $?"
+      read -t 1 var <<< "hello"; echo "exit: $?, var: '$var'"
