--- a/brush-shell/tests/cases/compat/process.yaml
+++ b/brush-shell/tests/cases/compat/process.yaml
@@ -1,7 +1,7 @@
 name: "Process"
 common_test_files:
   - path: "process-helpers.sh"
-    source_path: "../utils/process-helpers.sh"
+    source_path: "../../utils/process-helpers.sh"
 
 cases:
   - name: "Basic process"
